add option, export as png

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <div class="instruction">
     <p>Click Shape or Press R to Generate</p>
-    <p>Press S to download as SVG</p>
+    <p>Press S to download as SVG, Press P to download as PNG</p>
   </div>
 </body>
 </html>
