--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 </head>
 <body>
   <div class="instruction">
-    <p>Click Shape or Press R to Generate</p>
-    <p>Press S to download as SVG, Press P to download as PNG</p>
+    <p>Press R / Click Shape to Generate</p>
+    <p>Press S to download as SVG</p>
+    <p>Press P to download as PNG</p>
   </div>
 </body>
 </html>
